--- a/helm/tentacle/templates/_sealedSecret.yaml
+++ b/helm/tentacle/templates/_sealedSecret.yaml
@@ -1,22 +1,31 @@
-{{- define "tentacle.sealedSecret" }}
+{{- define "tentacle.sealedSecret.tpl" }}
 ---
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
-{{ include "tentacle.sealedSecret.metadata" . }}
+{{ include "tentacle.helpers.merge" (append (list . "tentacle.sealedSecret.metadata.tpl") "tentacle.metadata") }}
 spec:
   encryptedData:
-    {{- range $key, $value := .Values.sealedSecrets.data }}
+    {{- range $key, $value := .Values.sealedSecret.data }}
       {{- $key | nindent 4 }}: {{ $value | quote }}
     {{- end -}}
 {{- end -}}
 
-{{- define "tentacle.sealedSecret.metadata" }}
-{{- $scope := .Values.sealedSecrets.scope | default "strict" -}}
+{{- define "tentacle.sealedSecret.metadata.tpl" }}
+{{- $scope := .Values.sealedSecret.scope | default "strict" -}}
 
-{{- include "tentacle.metadata" . }}
+metadata:
   annotations:
     sealedsecrets.bitnami.com/scope: {{ $scope | quote }}
     {{- if not (eq $scope "strict") }}
     sealedsecrets.bitnami.com/{{ $scope }}: "true"
     {{- end -}}
+{{- end -}}
+
+{{- define "tentacle.sealedSecret" -}}
+  {{- if .Values.sealedSecret }}
+    {{- include "tentacle.helpers.merge" (append (list . "sealedSecret") "tentacle.sealedSecret.tpl") }}
+  {{- end }}
+{{- end -}}
+
+{{- define "sealedSecret" }}
 {{- end -}}
