--- a/helm/tentacle/templates/_sealedSecret.yaml
+++ b/helm/tentacle/templates/_sealedSecret.yaml
@@ -1,5 +1,4 @@
-{{- define "tentacle.sealedSecret.tpl" }}
----
+{{- define "tentacle.sealedSecret.tpl" -}}
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 {{ include "tentacle.helpers.merge" (append (list . "tentacle.sealedSecret.metadata.tpl") "tentacle.metadata") }}
@@ -23,8 +22,14 @@ metadata:
 
 {{- define "tentacle.sealedSecret" -}}
   {{- if .Values.sealedSecret }}
-    {{- include "tentacle.helpers.merge" (append (list . "sealedSecret") "tentacle.sealedSecret.tpl") }}
-  {{- end }}
+    {{- $tentacleValues := dict "Values" .Values.tentacle -}}
+    {{- $overrideValues := dict "Values" (omit .Values "tentacle") -}}
+    {{- $noValues := omit . "Values" -}}
+
+    {{- with merge $noValues $overrideValues $tentacleValues -}}
+      {{- include "tentacle.helpers.merge" (append (list . "sealedSecret") "tentacle.sealedSecret.tpl") }}
+    {{- end -}}
+  {{- end -}}
 {{- end -}}
 
 {{- define "sealedSecret" }}
