--- a/helm/tentacle/templates/_sealedSecret.yaml
+++ b/helm/tentacle/templates/_sealedSecret.yaml
@@ -26,10 +26,10 @@ metadata:
     {{- $overrideValues := dict "Values" (omit .Values "tentacle") -}}
     {{- $noValues := omit . "Values" -}}
 
-    {{- with merge $noValues $overrideValues $tentacleValues -}}
+    {{- with merge $noValues $overrideValues $tentacleValues }}
       {{- include "tentacle.helpers.merge" (append (list . "sealedSecret") "tentacle.sealedSecret.tpl") }}
-    {{- end -}}
-  {{- end -}}
+    {{- end }}
+  {{- end }}
 {{- end -}}
 
 {{- define "sealedSecret" }}
