Create custom packaging-type

--- a/maven-test/pom.xml
+++ b/maven-test/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>application</module>
         <module>common</module>
+        <module>helm</module>
     </modules>
 
     <properties>
@@ -43,20 +44,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>yg0r2.examples</groupId>
-                <artifactId>examples-maven-plugin</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
-                <executions>
-                    <execution>
-                        <phase>clean</phase>
-                        <goals>
-                            <goal>examples</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
