--- a/maven-extension-plugin/plugin/pom.xml
+++ b/maven-extension-plugin/plugin/pom.xml
@@ -15,6 +15,7 @@
         <maven-plugin.version>3.8.2</maven-plugin.version>
         <maven-plugin-tools.version>3.6.1</maven-plugin-tools.version>
         <maven-plugin-plugin.version>3.6.1</maven-plugin-plugin.version>
+        <maven-project.version>2.2.1</maven-project.version>
     </properties>
 
     <dependencies>
@@ -24,6 +25,12 @@
             <version>${maven-plugin.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-project</artifactId>
+            <version>${maven-project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
