--- a/spring/redis/src/main/resources/application.yaml
+++ b/spring/redis/src/main/resources/application.yaml
@@ -1,3 +1,14 @@
+logging:
+  level:
+    org.springframework.cache: TRACE
+
+spring:
+  cache:
+    type: redis
+  redis:
+    host: localhost
+    port: 6379
+
 springdoc:
   swagger-ui:
     enabled: true
